change name of first webpage to index.html

--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -2,8 +2,16 @@
 <html>
   <head>
     <title>My favorite things</title>
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
   </head>
   <body>
+    <h1>This is a list of My Favourite things</h1>
+    <ul>
+      <li>Coding</li>
+      <li>Gaming</li>
+      <li>watching movies</li>
+    </ul>
+    <p>I would also like to hear your's contact me <a href="mailto:ekagwima745@gmail.com">Email</a></p>
     
   </body>
   
