--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>My first webpage !</title>
+      <title>My first webpage !</title> 
+      <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>My first webpage</h1>
