--- a/index.html
+++ b/index.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>My first webpage !</title> 
-      <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <title>My first webpage !</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
   </head>
+  <header>
+    <img class="logo" src="images/logo.jpg" alt="logo" />
+    <nav>
+      <ul class="nav_links">
+        <li>Home</a></li>
+        <li>Projects</li>
+        <li><button>About</button></button></a></li>
+        <li><a class="cta" href="mailto:ekagwima745@gmail.com"><button>Contact</button></button></a></li>
+      </ul>
+    </nav>
+  </header>
   <body>
+    
     <h1>My first webpage</h1>
     <h2>Written with a little guidance from <em>Moringa School</em></h2>
+    <div class="section1">
     <p>Hello, world !</p>
     <p>Welcome to my <strong>first webpage</strong> !</p>
-    <p>Here are some things i'm going to learn about coding </p>
+    <p>Here are some things i'm going to learn about coding</p>
     <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>And a lot more</li>
-        <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. it's a great place to learn web development skills!</p>
-        <p>Here is a link to my <a href="my-favorite-things.html">Favourite things</a>.</p>
-        <img src="images/elephant.jpg" alt="A photo of an elephant">
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>And a lot more</li>
+      <p>
+        Check out <a href="http://moringaschool.com/">Moringa School</a>. it's a
+        great place to learn web development skills!
+      </p>
+      <p>Here is a link to my <a href="my-favorite-things.html">Favourite things</a>. </p>
+    </div>
+      <img src="images/elephant.jpg" alt="A photo of an elephant" />
     </ul>
   </body>
 </html>
